feat: Metadata extraction script with validation (#39) (#4)
* feat: Create metadata extraction script (#39)

## Summary

Node.js script to extract metadata from AsciiDoc anchor files and generate JSON for website.

## Deliverable

✅ `scripts/extract-metadata.js` (250+ lines)
✅ Uses @asciidoctor/core for proper AsciiDoc parsing
✅ Validates required attributes
✅ Generates 4 JSON output files
✅ npm script added: `npm run extract-metadata`

## Implementation

**Parsing:**
- Uses @asciidoctor/core to parse .adoc files
- Extracts AsciiDoc attributes (:categories:, :roles:, :related:, :proponents:, :tags:)
- Extracts document title
- Validates required attributes

**Output Files:**
- `website/public/data/anchors.json` - All anchors with metadata
- `website/public/data/categories.json` - Category aggregation
- `website/public/data/roles.json` - Role aggregation
- `website/public/data/metadata.json` - Summary statistics

**Validation:**
- ✅ Title required (ERROR)
- ✅ Roles required (ERROR)
- ⚠️  Categories optional (WARNING)
- ⚠️  Proponents optional (WARNING)

## Known Issues

**10 files missing :roles: attribute:**
- adr-according-to-nygard.adoc
- diataxis-framework.adoc
- dry-principle.adoc
- mece.adoc
- mental-model-according-to-naur.adoc
- spot-principle.adoc
- ssot-principle.adoc
- todotxt-flavoured-markdown.adoc
- what-qualifies-as-a-semantic-anchor.adoc

**1 file with invalid title:**
- arc42.adoc

**Root cause:** ID mismatch between anchor files and roles.yml
- roles.yml uses `dry` but file is `dry-principle.adoc`
- roles.yml uses `adr-nygard` but file is `adr-according-to-nygard.adoc`

**Fix:** Manual update needed for these 11 files to add/fix :roles: and :title: attributes

## Usage

```bash
npm run extract-metadata
```

## Next Steps

1. Fix 11 files with errors
2. Run script successfully
3. Validate generated JSON
4. Proceed to Issue #40 (Generate include files)

Related: Issue #39, depends on #38 (split - merged ✅)

* fix: Add missing :roles: attributes and ge

--- a/docs/anchors/adr-according-to-nygard.adoc
+++ b/docs/anchors/adr-according-to-nygard.adoc
@@ -1,5 +1,6 @@
 = ADR according to Nygard
 :categories: uncategorized
+:roles: software-architect, software-developer, team-lead
 
 [%collapsible]
 ====
