--- a/docs/anchors/arc42.adoc
+++ b/docs/anchors/arc42.adoc
@@ -1,4 +1,4 @@
-= arc42
+= arc42 Architecture Documentation
 :categories: uncategorized
 :roles: software-architect, technical-writer, team-lead
 :proponents: Gernot Starke, Peter Hruschka
