--- a/docs/anchors/todotxt-flavoured-markdown.adoc
+++ b/docs/anchors/todotxt-flavoured-markdown.adoc
@@ -1,5 +1,6 @@
 = todo.txt-flavoured Markdown
 :categories: uncategorized
+:roles: software-developer, team-lead, technical-writer
 :proponents: Combines GitHub-flavoured Markdown task lists with Gina Trapani's todo.txt format
 
 [%collapsible]
